@@ -104,6 +104,8 @@ MINOR CHANGES
       still be properly ranked even if their P-values are below the machine
       limit.
 
+    o convert_motifs() from MotifList (MotifDb) carries over dataSource.
+
 BUG FIXES
 
     o Fixed IC score calculation from character input in create_motif().
